update: scrollbar style; fix: fade effect in chromium based browsers

--- a/components/layout/index.module.scss
+++ b/components/layout/index.module.scss
@@ -15,6 +15,16 @@
   );
   overflow: auto;
 
+  &::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: #808080;
+    border-radius: 8px;
+  }
+
   @include base.media((tablet)) {
     left: 32px;
     width: calc(100vw - 64px);
